@@ -7,8 +7,10 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.Contract;
 
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
+import java.nio.charset.StandardCharsets;
 import java.util.Scanner;
 
 public class Updater {
@@ -53,9 +55,9 @@ public class Updater {
 		if (hasUpdate()) return;
 
 		try {
-			final URL url = new URL("https://api.spigotmc.org/legacy/update.php?resource=" + 58940);
+			final URL url = new URI("https://api.spigotmc.org/legacy/update.php?resource=" + 58940).toURL();
 			final URLConnection connection = url.openConnection();
-			final Scanner scan = new Scanner(connection.getInputStream());
+			final Scanner scan = new Scanner(connection.getInputStream(), StandardCharsets.UTF_8);
 
 			if (scan.hasNextLine())
 				onlineVersion = scan.nextLine();
